<resources>
    <string name="app_name">CricketMazza</string>
    <string name="home"><b>HOME</b></string>
    <string name="update"><b>UPDATE</b></string>
    <string name="live"><b>LIVE</b></string>
    <string name="recent"><b>RECENT</b></string>
    <string name="upcoming"><b>UPCOMING</b></string>
    <string name="recent_matches">Recent Matches</string>
    <string name="potm">Player of the Match</string>
    <string name="score_card">Score Card</string>
    <string name="points_table">Points Table</string>
    <string name="team_poster">Team Poster</string>
    <string name="matches_series_wise">Matches Series Wise</string>
    <string name="series_match">Series Match</string>
    <string name="vs">VS</string>
    <string name="total_matches">Total Matches</string>
    <string name="total_left">Total Left</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="featured_videos">Featured Videos</string>
    <string name="top_stories">Top Stories</string>
    <string name="top_stories_thumbanil">Top Stories Thumbanil</string>
    <string name="loreum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="view_more">View More</string>
    <string name="back_btn">Back Btn</string>
    <string name="upcoming_matches">Upcoming Matches</string>
    <string name="timer_time"><b>01:29:50</b></string>
    <string name="market">Market:</string>
    <string name="_20_overs">20 Overs:</string>
    <string name="share_this_app_give_us_5_star"><![CDATA[Share this App & Give us 5 Star]]></string>
    <string name="tie">Tie</string>
    <string name="all">ALL</string>
    <string name="odi">ODI</string>
    <string name="T20">T20</string>
    <string name="test">TEST</string>
    <string name="T10">T10</string>
    <string name="results">Results</string>
    <string name="info">INFO</string>
    <string name="squads">SQUADS</string>
    <string name="ball_by_ball">BALL BY BALL</string>
    <string name="match">Match</string>
    <string name="match_type">Match Type</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="toss">Toss</string>
    <string name="status">Status</string>
    <string name="umpire">Umpire</string>
    <string name="_3rd_empire">3rd Empire</string>
    <string name="referee">Referee</string>
    <string name="series">Series</string>
</resources>