<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_update_try"
        android:title="@string/update"

        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/live"
        android:icon="@drawable/ic_home"
        android:title="@string/live"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/recent"
        android:icon="@drawable/ic_update_try"
        android:title="@string/recent"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/upcoming"
        android:icon="@drawable/ic_home"
        android:title="@string/upcoming"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white" />
</menu>