<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Ui.Home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recentMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/recent_matches"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recentMatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recentMatches"
            tools:listitem="@layout/layout_home_recent_match" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_recentMatches"
            style="@style/SpinKitView.FadingCircle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            app:SpinKit_Color="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_recentMatchesWise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recentMatches" />

        <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
            android:id="@+id/ind_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/rv_recentMatches"
            app:spi_dotColor="@color/transparent_white"
            app:spi_dotSelectedColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recentMatchesWise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/matches_series_wise"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ind_recent"
            app:textAllCaps="true" />

        <ImageView
            android:id="@+id/iv_recent_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/team_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recentMatchesWise" />

        <RelativeLayout
            android:id="@+id/relative_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_recent_poster">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recentMatchWise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_home_recent_match_wise" />

        </RelativeLayout>

        <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
            android:id="@+id/ind_recent_matchwise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_recent"
            app:spi_dotColor="@color/transparent_white"
            app:spi_dotSelectedColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_home_featured_video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/featured_videos"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ind_recent_matchwise"
            app:textAllCaps="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_featured_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_featured_video_title"
            tools:listitem="@layout/layout_featured_videos" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_home_top_stories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/top_stories"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_home_featured_video"
            app:textAllCaps="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_top_stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_top_stories_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_home_viewMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/bg_rounded_tab_look"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:fontFamily="@font/montserrat"
            android:padding="@dimen/_10sdp"
            android:text="@string/view_more"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_home_top_stories" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>